Implementation HT04 for session persistence.

--- a/LogisticAppProject/app/src/main/res/layout/activity_cordinator.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_cordinator.xml
@@ -15,6 +15,7 @@
         android:drawableLeft="@android:drawable/ic_lock_power_off"
 
         android:text="Salir"
+        android:onClick="CoordinatorLogout"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
