--- a/LogisticAppProject/app/src/main/res/layout/activity_delegate.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_delegate.xml
@@ -72,7 +72,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_delegate_help_option"
             android:gravity="center_horizontal|center_vertical"
-            android:text="SALIR" />
+            android:text="SALIR"
+            android:onClick="DelegateLogout"/>
 
     </RelativeLayout>
 
