--- a/LogisticAppProject/app/src/main/res/layout/activity_room_boss.xml
+++ b/LogisticAppProject/app/src/main/res/layout/activity_room_boss.xml
@@ -19,7 +19,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bConsultarMaterial"
+
+        android:onClick="RoomBossLogout"
         app:layout_constraintVertical_bias="0.771" />
 
     <Button
