--- a/LogisticAppProject/app/src/main/res/values/colors.xml
+++ b/LogisticAppProject/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#14216C</color>
     <color name="colorPrimaryDark">#2B43CD</color>
     <color name="colorAccent">#E91E63</color>
+    <color name="colorBlockOption">#A1999C</color>
 </resources>
